--- a/guest/templates/header.html
+++ b/guest/templates/header.html
@@ -303,7 +303,7 @@
 								<a href="{%  url 'door'  %}"><i class="la la-user-secret"></i> <span>Door</span></a>
 							</li>
 							<li> 
-								<a href="settings.html"><i class="la la-cog"></i> <span>Settings</span></a>
+								<a href="{%  url 'settings'  %}"><i class="la la-cog"></i> <span>Settings</span></a>
 							</li>
 									
 						</ul>
