user profiles changed

--- a/guest/templates/header.html
+++ b/guest/templates/header.html
@@ -105,7 +105,7 @@
 					<!-- Notifications -->
 					<li class="nav-item dropdown">
 						<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-							<i class="fa fa-bell-o"></i> <span class="badge badge-pill">3</span>
+							<i class="fa fa-bell-o"></i> <span class="badge badge-pill">2</span>
 						</a>
 						<div class="dropdown-menu notifications">
 							<div class="topnav-dropdown-header">
@@ -121,7 +121,7 @@
 													<img alt="" src="{% static 'assets/img/profiles/avatar-02.jpg' %}">
 												</span>
 												<div class="media-body">
-													<p class="noti-details"><span class="noti-title">John Doe</span> added new task <span class="noti-title">Patient appointment booking</span></p>
+													<p class="noti-details"><span class="noti-title">Onur</span> added new statement <span class="noti-title">Guest saatini 00:00'a uzatıyoruz</span></p>
 													<p class="noti-time"><span class="notification-time">4 mins ago</span></p>
 												</div>
 											</div>
@@ -134,51 +134,18 @@
 													<img alt="" src="{% static 'assets/img/profiles/avatar-03.jpg' %}">
 												</span>
 												<div class="media-body">
-													<p class="noti-details"><span class="noti-title">Tarah Shropshire</span> changed the task name <span class="noti-title">Appointment booking with payment gateway</span></p>
+													<p class="noti-details"><span class="noti-title">Cem</span> changed the task name <span class="noti-title">Appointment booking with payment gateway</span></p>
 													<p class="noti-time"><span class="notification-time">6 mins ago</span></p>
 												</div>
 											</div>
 										</a>
 									</li>
-									<li class="notification-message">
-										<a href="#">
-											<div class="media">
-												<span class="avatar">
-													<img alt="" src="{% static 'assets/img/profiles/avatar-06.jpg' %}">
-												</span>
-												<div class="media-body">
-													<p class="noti-details"><span class="noti-title">Misty Tison</span> added <span class="noti-title">Domenic Houston</span> and <span class="noti-title">Claire Mapes</span> to project <span class="noti-title">Doctor available module</span></p>
-													<p class="noti-time"><span class="notification-time">8 mins ago</span></p>
-												</div>
-											</div>
-										</a>
-									</li>
-									<li class="notification-message">
-										<a href="#">
-											<div class="media">
-												<span class="avatar">
-													<img alt="" src="{% static 'assets/img/profiles/avatar-17.jpg' %}">
-												</span>
-												<div class="media-body">
-													<p class="noti-details"><span class="noti-title">Rolland Webber</span> completed task <span class="noti-title">Patient and Doctor video conferencing</span></p>
-													<p class="noti-time"><span class="notification-time">12 mins ago</span></p>
-												</div>
-											</div>
-										</a>
-									</li>
-									<li class="notification-message">
-										<a href="#">
-											<div class="media">
-												<span class="avatar">
-													<img alt="" src="{% static 'assets/img/profiles/avatar-13.jpg' %}">
-												</span>
-												<div class="media-body">
-													<p class="noti-details"><span class="noti-title">Bernardo Galaviz</span> added new task <span class="noti-title">Private chat module</span></p>
-													<p class="noti-time"><span class="notification-time">2 days ago</span></p>
-												</div>
-											</div>
-										</a>
-									</li>
+
+
+									
+
+									
+									
 								</ul>
 							</div>
 							<div class="topnav-dropdown-footer">
