--- a/guest/templates/header.html
+++ b/guest/templates/header.html
@@ -134,7 +134,7 @@
 													<img alt="" src="{% static 'assets/img/profiles/avatar-03.jpg' %}">
 												</span>
 												<div class="media-body">
-													<p class="noti-details"><span class="noti-title">Cem</span> changed the task name <span class="noti-title">Appointment booking with payment gateway</span></p>
+													<p class="noti-details"><span class="noti-title">Cem</span> changed the task name <span class="noti-title">Zarflarınızı almak için ofise gelebilirsiniz</span></p>
 													<p class="noti-time"><span class="notification-time">6 mins ago</span></p>
 												</div>
 											</div>
